--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
+alembic==1.16.1
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
 fastapi==0.115.12
 greenlet==3.2.3
 idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
+python-dotenv==1.1.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
